src/objects/SBQQ__InstallProcessorLog__c/SBQQ__InstallProcessorLog__c.object-meta.xml
<CustomObject>
    <customHelpPage>SBQQ__ImportFormatHelp</customHelpPage>
    <description>Logs timestamps for methods within the Install Script</description>
    <label>Install Processor Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Install Processor Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Install Processor Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>