src/objects/SBQQ__InstallProcessorLog__c/fields/SBQQ__Version__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Version__c</fullName>
    <description>Package version at the time of running the method</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Package version at the time of running the method</inlineHelpText>
    <label>Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>